--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <title>yaoyue68's blog</title>
 </head>
 <frameset framespacing="0" border="0" rows="0" frameborder="0">
-<frame name="main" src="https://9c45684.r2.cpolar.cn" scrolling="auto" noresize>
+<frame name="main" src="https://www.baidu.com" scrolling="auto" noresize>
 </frameset>
 </html>
